# sqlalchemy_interbase

./: LICENSE  TEST.DB  create_table.py  create_table4.py  create_test_db.py  create_test_table.py  interbase_dialect_fdb.py  patches.py  pyproject.toml  reflect.py  reflect_tables.py  requirements.txt  setup.py  testkbas.py
sqlalchemy_interbase/: __init__.py  base.py  ib_info.py  provision.py  types.py
sqlalchemy_interbase/stored_procedures/: rfunc.sql
