[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sqlalchemy-interbase"
description = "Interbase for SQLAlchemy"
version = '0.0.1'
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
keywords = ["SQLAlchemy", "Interbase", "interbase-driver"]
license = {file = "LICENSE"}

readme = 'README.md'
authors = [
    { name="o-murphy", email="thehelixpg@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Front-Ends",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy >= 1.4, < 2.0; python_version < '3.8'",
    "SQLAlchemy >= 2.0; python_version >= '3.8'",
    "interbase == 1.0.0"
]

dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.urls]
"Source" = "https://github.com/o-murphy/sqlalchemy_interbase"
"Homepage" = "https://github.com/o-murphy/sqlalchemy_interbase"
"Bug Reports" = "https://github.com/o-murphy/sqlalchemy_interbase/issues"

[tool.setuptools]
py-modules = ["sqlalchemy_interbase"]

[tool.setuptools.packages.find]
where = ["."]

[project.entry-points."sqlalchemy.dialects"]
"interbase" = "sqlalchemy_interbase.base:IBDialect"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "sqlalchemy_firebird.__version__"}

